Info flickering fix

--- a/static/css/assessment.css
+++ b/static/css/assessment.css
@@ -128,6 +128,7 @@
     padding: 0.1rem 0.65rem;
     font-size: 16px;
     transition: background-color 0.3s ease;
+    cursor: pointer;
 }
 
 .info-container .info-text {
@@ -141,6 +142,6 @@
     color: white;
 }
 
-.info-container:has(.info-button:hover) .info-text {
+.info-container:has(.info-button:focus) .info-text {
     display: block;
 }
